crates/iota/tests/snapshots/shell_tests__iota_move_new_tests__new_then_build.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/new_tests/new_then_build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Modifications Copyright (c) 2025 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

# tests that iota move new followed by iota move build succeeds

iota move new example
cd example && iota move build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY DeepBook
INCLUDING DEPENDENCY IotaSystem
INCLUDING DEPENDENCY IOTA
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
